--- a/Front/package.json
+++ b/Front/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +17,10 @@
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
