--- a/Front/package.json
+++ b/Front/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
