--- a/Front/package.json
+++ b/Front/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
