--- a/Front/package.json
+++ b/Front/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-form-validator": "^3.0.1",
+    "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
