--- a/Back/package.json
+++ b/Back/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "nodemon server.js"
   },
-  "author": "Kaiser",
+  "author": "Zoutch",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "json-stringify-safe": "^5.0.1",
     "nodemon": "^3.0.1",
     "oracledb": "^6.0.2"
   }
