--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,7 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-export": "^0.6.0",
     "react-dom": "^18.2.0",
     "react-material-ui-form-validator": "^3.0.1",
     "react-modal": "^3.16.1",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.20",
