--- a/Front/package.json
+++ b/Front/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/base": "^5.0.0-beta.10",
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.13.7",
@@ -15,8 +16,10 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.8.0",
@@ -33,7 +36,8 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.20",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
