--- a/Front/package.json
+++ b/Front/package.json
@@ -9,12 +9,14 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.13.7",
+    "@mui/x-charts": "^6.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
+    "echarts-for-react": "^3.0.2",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.7",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
