--- a/Front/package.json
+++ b/Front/package.json
@@ -17,8 +17,10 @@
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
     "echarts-for-react": "^3.0.2",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.8.0",
@@ -33,7 +35,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
     "sweetalert2": "^11.7.20",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
