--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
+    "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.1",
@@ -35,6 +36,7 @@
     "react-spring": "^9.7.2",
     "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.3",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4",
